deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starter
  template:
    metadata:
      labels:
        app: starter
    spec:
      containers:
      - name: starter2
        image: harmanpreet27/starter
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: starter-service
spec:
  type: NodePort
  selector:
    app: starter
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
